--- a/SushiRoll/Config/DefaultEngine.ini
+++ b/SushiRoll/Config/DefaultEngine.ini
@@ -2,14 +2,14 @@
 GameName=SushiRoll
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/RollingBP/Maps/RollingBPExampleMap
+EditorStartupMap=/Game/RollingBP/Maps/SushiRoll.SushiRoll
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/RollingBP/Maps/RollingBPExampleMap
+GameDefaultMap=/Game/RollingBP/Maps/SushiRoll.SushiRoll
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/RollingBP/Blueprints/RollingGameMode.RollingGameMode_C
 GlobalDefaultServerGameMode=None
@@ -27,5 +27,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
